Name:                Expresso
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             OtherLicense
License-File:        LICENSE
Author:              Ben Moseley
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

-- data-files: static/*.css

Executable Expresso
  hs-source-dirs: src
  main-is: Expresso.hs

  other-modules: Paths_Expresso

  Build-depends:
    -- corePackages (see [cabal2nix/src/Cabal2Nix/CorePackages.hs])
    base                      >= 4.4      && < 5,
    bytestring                >= 0.9.1   && < 0.11,
    containers                >= 0.4,
    directory                 >= 1.1,
    filepath                  >= 1.3,

    -- Normal Packages
    aeson                     >= 0.9,
    array,
    errors,

    mtl                       >= 2       && < 3,
    text                      >= 0.11,
    time                      >= 1.5,
    transformers              >= 0.3,

    wl-pprint-text            >= 1.1

  ghc-options: -threaded -rtsopts -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-orphans -fno-warn-unused-do-bind
